global filters animation no longer causes an overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,6 +121,7 @@ h2 {
   position: sticky;
   top: 0;
   min-height: 30px;
+  overflow-x: hidden;
 }
 
 #global-filters.visible {
